--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                       placeholder="domain-name.freshdesk.com"
                       required
                     />
-                    <small>Ex: newaccount1626011593324</small>
+                    <small>Eg: newaccount1626011593324</small>
                   </div>
                   <div class="form-group">
                     <input type="text" placeholder="API Key" class="form-control" id="apikey" required />
-                    <small>Ex: SoJBVzEs5lSmBDmTKWyi</small>
+                    <small>Eg: SoJBVzEs5lSmBDmTKWyi</small>
                   </div>
                   <button type="button" class="btn btn-primary login" onclick="login()">
                     Login
