--- a/freshdesk.html
+++ b/freshdesk.html
@@ -105,7 +105,7 @@
                   </div>
                   <div class="form-group">
                     <label for="add-twitter">Captcha</label>
-                    <input type="text" class="form-control" id="add-twitter" placeholder="Enter a random number 5 digit number or letters" required>
+                    <input type="text" class="form-control" id="add-twitter" placeholder="Enter a random number 5 digit number or letters" required minlength="5">
                   </div>
                 <button type="submit" class="btn btn-primary contact-add">Submit</button>
               </form>
